--- a/weapp/static_v2/css/new_weixin_message.css
+++ b/weapp/static_v2/css/new_weixin_message.css
@@ -122,6 +122,16 @@
 .xui-weixin-realtimeMessagePage .xui-message span{
     cursor: text;
 }
+
+.xui-weixin-realtimeMessagePage .xui-message .xui-clock{
+    float: left;
+    position: relative;
+    left: 100px;
+    top: -20px;
+    font-size: 12px;
+    color: #999;
+}
+
 .xui-weixin-realtimeMessagePage .xui-message .xui-i-remark-text {
     color: #f39800;
     cursor: text !important;
