--- a/weapp/member/templates/member/editor/member_qrcode.html
+++ b/weapp/member/templates/member/editor/member_qrcode.html
@@ -136,11 +136,11 @@ $(document).ready(function() {
         }
         W.getApi().call({
             app: 'member',
-            api: 'member_qrcode/edit',
             method: 'post',
+            resource: 'member_qrcode',
             args: args,
             success: function(data) {
-                window.location.href = '/member/member_qrcode/get/';
+                window.location.href = '/member/member_qrcode/';
             },
             error: function(resp) {
                 var msg = resp.errMsg || '保存失败';
