--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/success.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/success.html
@@ -50,7 +50,7 @@
 				<span>查看订单</span>
 			</a>
 
-			<a href="./?woid={{request.webapp_owner_id}}&{%if request.webapp_owner_id == 216 %}project_id=4109{%else%}module=mall&model=products&action=list{%endif%}" class="xui-i-rightBox xt-productListLink">
+			<a href="./?woid={{request.webapp_owner_id}}&{%if is_weizoom_mall %}project_id=4109{%else%}module=mall&model=products&action=list{%endif%}" class="xui-i-rightBox xt-productListLink">
 				<div class="xui-otherPageImg">
 					<img src="/static_v2/img/webapp/mall/order_home.png">
 				</div>
