--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/success_feed_back.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/success_feed_back.html
@@ -21,7 +21,7 @@
 				<span>个人中心</span>
 			</a>
 
-			<a href="./?woid={{request.webapp_owner_id}}&{%if request.webapp_owner_id == 216 %}project_id=4109{%else%}module=mall&model=products&action=list{%endif%}" class="xui-i-rightBox">
+			<a href="./?woid={{request.webapp_owner_id}}&{%if is_weizoom_mall %}project_id=4109{%else%}module=mall&model=products&action=list{%endif%}" class="xui-i-rightBox">
 				<div class="xui-otherPageImg">
 					<img src="/static_v2/img/webapp/mall/order_home.png">
 				</div>
