--- a/weapp/weixin2/templates/weixin/message/mass_sending_messages.html
+++ b/weapp/weixin2/templates/weixin/message/mass_sending_messages.html
@@ -98,7 +98,7 @@
 
         <div class="xui-massageSendingGroup xa-changeSendNumber" data-send-number={{number}}>
             <span class="xa-changeSendText">准备向{{number}}人发送信息</span>
-            <a href="../../member/members/get/">重新筛选</a>
+            <a href="../../member/member_list/">重新筛选</a>
         </div>
     {% endif %}
 
