增加 原有数据启用底部到的command

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
@@ -82,6 +82,7 @@ $(document).ready(function() {
             var user_member_grade_id = data.member_grade_id;
             if(data.count != 0) {
                 $('.xa-shoppingCartCount').text(data.count).removeClass("hidden");
+                $('.xa-shopCarCount').text(data.count).show();
             }
             $(".xa-product").each(function(){
                 // 商品原价
