--- a/weapp/templates/global_navbar.html
+++ b/weapp/templates/global_navbar.html
@@ -44,9 +44,7 @@
                     <li class="xa-outLink" data-page="shopping-cart">
                         <a href="/workbench/jqm/preview/?woid={{request.webapp_owner_id}}&module=mall&model=shopping_cart&action=show&workspace_id=mall">
                             <i class="xui-bg">
-                            {% if member.shopping_cart_product_count %}
-                            <span class="xui-shopCar xa-shopCarCount">{{ member.shopping_cart_product_count }}</span>
-                            {% endif %}
+                            <span class="xui-shopCar xa-shopCarCount {% if member.shopping_cart_product_count %}{% else %}xui-hide{% endif %}">{{ member.shopping_cart_product_count }}</span>
                             </i>
                         </a>
                     </li>
