--- a/weapp/termite/static/termite_js/app/component/wepage/navbar/navbar.html
+++ b/weapp/termite/static/termite_js/app/component/wepage/navbar/navbar.html
@@ -47,9 +47,7 @@
 					<li class="xa-outLink" data-page="shopping-cart">
                         <a href="/workbench/jqm/preview/?woid={{request.webapp_owner_id}}&module=mall&model=shopping_cart&action=show&workspace_id=mall">
                             <i class="xui-bg">
-                            {% if shopping_cart_product_count %}
-                            <span class="xui-shopCar xa-shopCarCount">{{ shopping_cart_product_count }}</span>
-                            {% endif %}
+                            <span class="xui-shopCar xa-shopCarCount {% if shopping_cart_product_count %}{% else %}xui-hide{% endif %}">{{ shopping_cart_product_count }}</span>
                             </i>
                         </a>
 					</li>
