--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -3,6 +3,38 @@
 {% load workbench_filter %}
 {% load apps_filter %}
 
+{% block css %}
+    <style>
+        .xui-i-tag{
+            width: 150px;
+        }
+        .xui-i-tag-active{
+            border-bottom: 3px solid #1F7DBD;
+        }
+        .xui-tag-group, .xui-setting-tag, .xui-state-tag{
+           background-color: #EAEEF7;
+        }
+        .xui-tag-group{
+            border-bottom: 1px solid rgba(51, 51, 51, 0.13);
+            height: 40px;
+            padding: 5px 10px 5px 0;
+        }
+        .xui-tag-group .xui-i-tag{
+            font-size: 18px;
+            padding: 5px 20px 0 20px;
+            display: inline-block;
+            width: 150px;
+            height: 35px;
+            text-align: center;
+        }
+        .xui-status-control{
+            background: white;
+            margin: 15px 10px;
+            padding: 20px 30px;
+        }
+    </style>
+{% endblock %}
+
 {% block content-panel %}
 <div id="workbench" class="xui-wepage-workbenchPage clearfix pr xui-appPage-commonStyle">
   <div class="relative">
@@ -12,8 +44,25 @@
       <li class="active">新建</li>
     </ul>
   </div>
-  
-  <div style="background-color: #EAEEF7;" class="clearfix">
+
+    <div class="xui-tag-group xa-tag-group">
+        <span class="xui-i-tag xui-i-tag-active" target="xa-setting">规则设置</span>
+        <span class="xui-i-tag" target="xa-state">签到统计</span>
+        <!--<button type="button" class="xui-link-copy fr">复制链接</button>-->
+    </div>
+
+    <div class="clearfix xui-setting-tag xa-setting">
+        <div class="xui-status-control xa-status-control">
+            <p><b>签到设置</b><br>请设置成功后开启签到功能！</p>
+            <span>
+                {% if sign and sign.status_text == '进行中' %}
+                    <button type="button" class="btn btn-danger fr" style="margin-top: -35px;" onclick="changeStatus('off');">关&nbsp;&nbsp;闭</button>
+                {% else %}
+                    <button type="button" class="btn btn-primary fr" style="margin-top: -35px;" onclick="changeStatus('on');">开&nbsp;&nbsp;启</button>
+                {% endif %}
+            </span>
+
+        </div>
     <div id="leftPanel" class="fl xui-workbench-leftPanel xui-hide">
     </div>
     
@@ -31,11 +80,12 @@
     <div id="rightPanel" class="fl xui-workbench-rightPanel xui-hide mb30">
     </div>
   </div>
+    <div class="xui-state-tag xa-state" style="display: none">表格</div>
 </div>
 {% endblock %}
 
 {% block global_elements %}
-<div class="xui-bottomActionBar">
+<div class="xui-bottomActionBar">{{ sign.status_text }}
   {% if not sign %}
     <button class="xa-save btn btn-primary">保存</button>
     <button class="xa-preview btn btn-default ml20">预览</button>
@@ -65,6 +115,7 @@
   <!-- *end_prunt_task* -->
   
   <script type="text/javascript">
+    var signStatus = false;
     W.uid = {{ user.id }};
     W.projectId = "{{project_id}}";
     W.activityId = "{{sign.id}}";
@@ -73,6 +124,8 @@
     var isCreateNewData = {% if is_create_new_data %}true{% else %}false{% endif %};
     W.isSystemManager = {% if user|is_system_manager %}true{% else %}false{% endif %};
     var bottomDistance = 110;
+    /* 自动选中cid，当页面进来的时候 */
+    W.autoSelectCid = 2;
     
     var loadPages = function(pageManagerView) {
       W.getApi().call({
@@ -225,7 +278,44 @@
         // 点击空白处，触发事件
         W.Broadcaster.trigger('designpage:cancel_delete');
       });
+
+        //绑定标签页切换事件
+        $('.xa-tag-group').delegate('.xui-i-tag', 'click', function(){
+            var target = $(this).attr('target');
+            var $this = $(this);
+            if('xa-setting' == target){
+                $('.xa-setting').show().siblings('.xa-state').hide();
+            }else if('xa-state' == target){
+                $('.xa-state').show().siblings('.xa-setting').hide();
+            }
+            $this.addClass('xui-i-tag-active').siblings().removeClass('xui-i-tag-active');
+        });
     });
+
+    function changeStatus(act){
+        var innerHtml = act=='on' ? '<button type="button" class="btn btn-danger fr" style="margin-top: -35px;" onclick="changeStatus(\'off\');">关&nbsp;&nbsp;闭</button>':
+                '<button type="button" class="btn btn-primary fr" style="margin-top: -35px;" onclick="changeStatus(\'on\');">开&nbsp;&nbsp;启</button>';
+        if(isCreateNewData){
+            signStatus = act == 'on';
+        }else{
+            W.getApi().call({
+                app: 'apps/sign',
+                resource: 'sign',
+                method: 'post',
+                args: {
+                    signId: W.activityId,
+                    status: act
+                },
+                success: function(data) {
+                    W.showHint('success', '更新状态成功');
+                    $('.xa-status-control').html(innerHtml);
+                },
+                error: function(resp) {
+                  W.showHint('error', '更新状态失败!');
+                }
+            });
+        }
+    }
   </script>
 {% block js %}{% endblock %}
 {% endblock %}
