--- a/weapp/termite/static/v4/css/widget.css
+++ b/weapp/termite/static/v4/css/widget.css
@@ -663,7 +663,7 @@ ul.wui-relatelink li h3{
 .wui-productlist .wui-inner-titleAndprice .xui-inner-title{
     font-size: 13px;
     padding: 6px 0px 0px;
-    height: 32px;
+    height: 33px;
     color: #333;
     overflow: hidden;
 }
@@ -847,6 +847,7 @@ ul.wui-relatelink li h3{
 }
 .wui-product .wui-block-type1 .wui-inner-titleAndprice p:first-child,.wui-productlist .wui-block-type1 .wui-inner-titleAndprice p:first-child{
     margin-bottom: 6px;
+    line-height: 16px;
 }
 .wui-product .wui-block-type1,.wui-productlist .wui-block-type1{
     padding-left: 10px;
