需求4785 订单管理增加付款和发货时间查询

--- a/weapp/static_v2/js/view/mall_order_filter_view/template.html
+++ b/weapp/static_v2/js/view/mall_order_filter_view/template.html
@@ -24,7 +24,11 @@
 	</div>
 	<div class="xui-col disTc">
 		<div class="xui-i-item">
-			<label>下单时间：</label>
+			<select  id="date_type_select" name="time_select"  class="w90">
+				<option value="1">下单时间</option>
+				<option value="2">付款时间</option>
+				<option value="3">发货时间</option>
+			</select>
 			<input
 				type="text"
 				class="form-control xui-datePicker"
