--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -80,8 +80,64 @@
     <div id="rightPanel" class="fl xui-workbench-rightPanel xui-hide mb30">
     </div>
   </div>
-    <div class="xui-state-tag xa-state" style="display: none">表格</div>
+    <div class="xui-state-tag xa-state" style="display: none">
+        <div
+			class="panel-body panel-table p0 mt10"
+			data-ui-role="advanced-table"
+			data-app="apps/sign"
+			data-resource="sign_participances"
+			data-args='{"id": "{{activity_id}}"}'
+			data-template-id="#table"
+			data-enable-paginator="true"
+			data-enable-sort="true"
+			data-selectable="false"
+			data-disable-header-select="true"
+			data-item-count-per-page="10"
+		>
+		</div>
+    </div>
 </div>
+    {% verbatim %}
+        <script id="table" type="text/x-jquery-tmpl">
+            {{if items!='' }}
+            <table class="table table-bordered xb-stripedTable xb-noTdBorder xb-noBottom xb-noBorder xb-theadBg mb10">
+                <thead>
+                    <tr>
+                        <th>会员</th>
+                        <th>投票时间</th>
+                        <th>操作</th>
+                    </tr>
+                </thead>
+                <tbody>
+                  {{each(i, item) items}}
+                    <tr data-id="${item.id}">
+                        <td
+                            class="tl pl25"
+                            style="width:250px; height:60px;"
+                        >
+                            <img src="${item.participant_icon}" />
+                            {{html item.participant_name}}
+                        </td>
+                        <td>
+                            ${item.created_at}
+                        </td>
+                        <td>
+                            <a href="javascript:void(0);" class="ml5 xa-viewData">查看结果</a>
+                        </td>
+                    </tr>
+                    {{/each}}
+                </tbody>
+                <div class="cb"></div>
+            </table>
+            {{else}}
+                <div class="xui-emptyBox m10">
+                    <img src="/static_v2/img/editor/empty.png">
+                    <span class="ml20">您还没有相关数据！</span>
+                </div>
+            {{/if}}
+            <br>
+        </script>
+    {% endverbatim %}
 {% endblock %}
 
 {% block global_elements %}
