找到了改的地方

--- a/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
@@ -1,7 +1,7 @@
 {% load workbench_filter %}
 
 
-{% ifequal component.type 'appkit.signdescription' %}
+{#{% ifequal component.type 'appkit.signdescription' %}#}
     <div class="wui-surveyDescription wui-lotterydescription">
         <div class="wui-i-roulette wui-i-title">
             <h1 class="wui-i-innerTitle">
@@ -187,4 +187,4 @@
         </div>
 	</div>
 </div>
-{% endifequal %}
+{#{% endifequal %}#}
