（样式问题）【微信沟通】-【消息互动】-【群发消息】已发送的多条图文消息，记录中没有对齐 （样式问题）【会员管理】-【会员等级】提示信息位置不正确 （样式问题）【微信沟通】-【消息互动】-【群发消息】在新建群发消息，选择分组，分组名过长时，输入框中第二行显示一半并且选择分组字样消失

--- a/weapp/static_v2/css/mass_message.css
+++ b/weapp/static_v2/css/mass_message.css
@@ -20,6 +20,9 @@
 	min-height: 687px;
 
 }
+.xui-massSendingMessage select {
+	white-space: nowrap;
+}
 
 .xui-massSendingMessage .xui-massageSendingCount{
 	width: 185px;
