--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -108,8 +108,13 @@
                 <thead>
                     <tr>
                         <th>会员</th>
-                        <th>投票时间</th>
-                        <th>操作</th>
+                        <th>第一次签到</th>
+                        <th>最后一次签到</th>
+                        <th>累计次数</th>
+                        <th>连续次数</th>
+                        <th>最高连续次数</th>
+                        <th>奖励总积分</th>
+                        <th>优惠券奖励</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -126,7 +131,22 @@
                             ${item.created_at}
                         </td>
                         <td>
-                            <a href="javascript:void(0);" class="ml5 xa-viewData">查看结果</a>
+                            ${item.latest_date}
+                        </td>
+                        <td>
+                            ${item.total_count}
+                        </td>
+                        <td>
+                            ${item.serial_count}
+                        </td>
+                        <td>
+                            ${item.top_serial_count}
+                        </td>
+                        <td>
+                            ${item.total_integral}
+                        </td>
+                        <td>
+                            ${item.latest_coupon}
                         </td>
                     </tr>
                     {{/each}}
@@ -145,7 +165,7 @@
 {% endblock %}
 
 {% block global_elements %}
-<div class="xui-bottomActionBar">{{ sign.status_text }}
+<div class="xui-bottomActionBar">
   {% if not sign %}
     <button class="xa-save btn btn-primary">保存</button>
     <button class="xa-preview btn btn-default ml20">预览</button>
@@ -186,6 +206,8 @@
     var bottomDistance = 110;
     /* 自动选中cid，当页面进来的时候 */
     W.autoSelectCid = 2;
+
+    var table;
     
     var loadPages = function(pageManagerView) {
       W.getApi().call({
@@ -220,6 +242,7 @@
     }
     
     $(document).ready(function() {
+        table = $('[data-ui-role="advanced-table"]').data('view');
       var windowHeight = $(window).height();
       var height = windowHeight - 350;
       
@@ -353,14 +376,25 @@
                 $('.xa-setting').show().siblings('.xa-state').hide();
             }else if('xa-state' == target){
                 $('.xa-state').show().siblings('.xa-setting').hide();
+                table && table.reload({
+                    id: W.activityId
+                }, {
+                    emptyDataHint: '没有符合条件的数据'
+                });
             }
             $this.addClass('xui-i-tag-active').siblings().removeClass('xui-i-tag-active');
         });
     });
 
     function changeStatus(act){
-        var innerHtml = act=='on' ? '<button type="button" class="btn btn-danger fr" style="margin-top: -35px;" onclick="changeStatus(\'off\');">关&nbsp;&nbsp;闭</button>':
-                '<button type="button" class="btn btn-primary fr" style="margin-top: -35px;" onclick="changeStatus(\'on\');">开&nbsp;&nbsp;启</button>';
+        var innerHtml,actionHtml;
+        if(act == 'on'){
+            innerHtml = '<button type="button" class="btn btn-danger fr" style="margin-top: -35px;" onclick="changeStatus(\'off\');">关&nbsp;&nbsp;闭</button>';
+            actionHtml = '进行中，不可更改';
+        }else{
+            innerHtml = '<button type="button" class="btn btn-primary fr" style="margin-top: -35px;" onclick="changeStatus(\'on\');">开&nbsp;&nbsp;启</button>';
+            actionHtml = '<button class="xa-save btn btn-primary">保存</button><button class="xa-preview btn btn-default ml20">预览</button>';
+        }
         if(isCreateNewData){
             signStatus = act;
             $('.xa-status-control>span').html(innerHtml);
@@ -376,6 +410,7 @@
                 success: function(data) {
                     W.showHint('success', '更新状态成功');
                     $('.xa-status-control>span').html(innerHtml);
+                    $('.xui-bottomActionBar').html(actionHtml);
                 },
                 error: function(resp) {
                   W.showHint('error', '更新状态失败!');
