--- a/weapp/templates/weapp_jssdk_base.html
+++ b/weapp/templates/weapp_jssdk_base.html
@@ -115,8 +115,7 @@
             'onMenuShareQQ',
             'previewImage',
             'hideOptionMenu',
-            'showOptionMenu',
-            'previewImage'
+            'showOptionMenu'
           ],
           success: function (res) {
             if(!W.wxShareData)
@@ -137,21 +136,5 @@
           }
         });
       });
-
-    function show_previewImage(current_image, images){
-      if (current_image){
-          var current = current_image;
-          var urls = images;
-          wx.previewImage({
-            current: current,
-            urls: images
-          });
-      }
-    } 
-    //show_previewImage('http://img5.douban.com/view/photo/photo/public/p1353993776.jpg', [
-    //        'http://img3.douban.com/view/photo/photo/public/p2152117150.jpg',
-    //        'http://img5.douban.com/view/photo/photo/public/p1353993776.jpg',
-    //        'http://img3.douban.com/view/photo/photo/public/p2152134700.jpg'
-    //      ])
 </script>
 {% endblock %}
