--- a/weapp/static_v2/css/mass_message.css
+++ b/weapp/static_v2/css/mass_message.css
@@ -18,9 +18,11 @@
 .xui-massSendingMessage{
 	background:#E9EDF5;
 	min-height: 687px;
-
 }
-
+.xui-massSendingMessage select{
+	white-space: nowrap;
+}
+  
 .xui-massSendingMessage .xui-massageSendingCount{
 	width: 185px;
 	height: 32px;
