解决BUG 4923 【商品管理】-【图片管理】导航栏中间少了一个商品管理

--- a/weapp/mall/templates/mall/editor/image_groups.html
+++ b/weapp/mall/templates/mall/editor/image_groups.html
@@ -4,6 +4,9 @@
 <div class="xui-editor-imageGroupPage">
 	<ul class="breadcrumb">
 		<li>您当前所在位置</li>
+		<li>
+			<a href="/mall2/product_list/?shelve_type=1">商品管理</a>
+		</li>
 		<li>图片管理</li>
 	</ul>
 	<div class="xui-rightPanelBg xui-tableList-content">
