优惠券到账通知需求更改

--- a/weapp/weixin2/templates/weixin/message/template_messages_detail.html
+++ b/weapp/weixin2/templates/weixin/message/template_messages_detail.html
@@ -46,19 +46,19 @@
             {% if message_detail.template_message.send_point == 2 %}
                 <fieldset class="ml110" style="margin-top: -20px;">
                     <div class="xui-contentItem">
-                        <label class="control-label tr w70">first：</label>
-                        <span class="mt5">恭喜您！获得一张优惠券!</span>
+                        <label class="control-label tr w80">first：</label>
+                        <span class="mt5">恭喜您领到一张优惠券!</span>
                     </div>
                     <div class="xui-contentItem">
-                        <label class="control-label tr w70">适用范围：</label>
-                        <span class="mt5">满59元即可使用 / 下单即可使用</span>
+                        <label class="control-label tr w80">优惠劵名称：</label>
+                        <span class="mt5">满50减10元</span>
                     </div>
                     <div class="xui-contentItem">
-                        <label class="control-label tr w70">使用规则：</label>
-                        <span class="mt5">每笔2015-09-07至2015-09-15有效</span>
+                        <label class="control-label tr w80">失效期：</label>
+                        <span class="mt5">2015-09-07至2015-09-15有效</span>
                     </div>
                     <div class="xui-contentItem">
-                        <label class="control-label tr w70">remark：</label>
+                        <label class="control-label tr w80">remark：</label>
                         <span class="mt5">点击查看优惠券详情，请在优惠券有效期内使用。</span>
                     </div>
                 </fieldset>
